docs-archive/apache-airflow-providers-databricks/7.21.0/_sources/_api/airflow/providers/databricks/triggers/databricks/index.rst.txt
airflow.providers.databricks.triggers.databricks
================================================

.. py:module:: airflow.providers.databricks.triggers.databricks


Classes
-------

.. autoapisummary::

   airflow.providers.databricks.triggers.databricks.DatabricksExecutionTrigger
   airflow.providers.databricks.triggers.databricks.DatabricksSQLStatementExecutionTrigger
   airflow.providers.databricks.triggers.databricks.DatabricksWarehouseStateTrigger


Module Contents
---------------

.. py:class:: DatabricksExecutionTrigger(run_id, databricks_conn_id, polling_period_seconds = 30, retry_limit = 3, retry_delay = 10, retry_args = None, run_page_url = None, repair_run = False, caller = 'DatabricksExecutionTrigger', workflow_run_id = None, databricks_task_key = None, max_retries = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   The trigger handles the logic of async communication with DataBricks API.

   :param run_id: id of the run
   :param databricks_conn_id: Reference to the :ref:`Databricks connection <howto/connection:databricks>`.
   :param polling_period_seconds: Controls the rate of the poll for the result of this run.
       By default, the trigger will poll every 30 seconds.
   :param retry_limit: The number of times to retry the connection in case of service outages.
   :param retry_delay: Minimum wait in seconds between retryable attempts when using the
       default retry strategy. The wait uses exponential backoff (doubling after each
       failure, capped at ``2 ** retry_limit`` seconds). May be a floating point number.
   :param retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param run_page_url: The run page url.
   :param repair_run: Repair the databricks run in case of failure.
   :param caller: The name of the operator that is calling the hook.
   :param workflow_run_id: Parent workflow run ID for task-level monitoring.
   :param databricks_task_key: Task key to monitor within ``workflow_run_id``.
   :param max_retries: Resolved Databricks-native ``max_retries`` for task-level monitoring.


   .. py:attribute:: run_id


   .. py:attribute:: databricks_conn_id


   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: retry_limit
      :value: 3



   .. py:attribute:: retry_delay
      :value: 10



   .. py:attribute:: retry_args
      :value: None



   .. py:attribute:: run_page_url
      :value: None



   .. py:attribute:: repair_run
      :value: False



   .. py:attribute:: caller
      :value: 'DatabricksExecutionTrigger'



   .. py:attribute:: workflow_run_id
      :value: None



   .. py:attribute:: databricks_task_key
      :value: None



   .. py:attribute:: max_retries
      :value: None



   .. py:attribute:: hook


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: on_kill()
      :async:


      Cancel the Databricks run when the trigger is cancelled by a user action.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: DatabricksSQLStatementExecutionTrigger(statement_id, databricks_conn_id, end_time, polling_period_seconds = 30, retry_limit = 3, retry_delay = 10, retry_args = None, caller = 'DatabricksSQLStatementExecutionTrigger')

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   The trigger handles the logic of async communication with DataBricks SQL Statements API.

   :param statement_id: ID of the SQL statement.
   :param databricks_conn_id: Reference to the :ref:`Databricks connection <howto/connection:databricks>`.
   :param end_time: The end time (set based on timeout supplied for the operator) for the SQL statement execution.
   :param polling_period_seconds: Controls the rate of the poll for the result of this run.
       By default, the trigger will poll every 30 seconds.
   :param retry_limit: The number of times to retry the connection in case of service outages.
   :param retry_delay: Minimum wait in seconds between retryable attempts when using the
       default retry strategy. The wait uses exponential backoff (doubling after each
       failure, capped at ``2 ** retry_limit`` seconds). May be a floating point number.
   :param retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param caller: The name of the operator that is calling the hook.


   .. py:attribute:: statement_id


   .. py:attribute:: databricks_conn_id


   .. py:attribute:: end_time


   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: retry_limit
      :value: 3



   .. py:attribute:: retry_delay
      :value: 10



   .. py:attribute:: retry_args
      :value: None



   .. py:attribute:: caller
      :value: 'DatabricksSQLStatementExecutionTrigger'



   .. py:attribute:: hook


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: on_kill()
      :async:


      Cancel the Databricks SQL statement when the trigger is cancelled by a user action.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: DatabricksWarehouseStateTrigger(warehouse_id, target_state, databricks_conn_id, end_time, polling_period_seconds = 30, retry_limit = 3, retry_delay = 10, retry_args = None, caller = 'DatabricksWarehouseStateTrigger')

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Poll a Databricks SQL warehouse until it reaches a target lifecycle state.

   Databricks has no cancel API for warehouse start or stop, so this trigger does
   not override ``on_kill``. Clearing a deferred wait leaves warehouse state unchanged.

   :param warehouse_id: ID of the Databricks SQL warehouse.
   :param target_state: Lifecycle state to wait for (``RUNNING`` or ``STOPPED``).
   :param databricks_conn_id: Reference to the :ref:`Databricks connection <howto/connection:databricks>`.
   :param end_time: Absolute Unix timestamp when the wait must stop. The operator
       sets this from ``timeout`` before deferring so a triggerer restart or HA
       rebalance does not reset the deadline.
   :param polling_period_seconds: Controls the rate of the poll for the warehouse state.
       By default, the trigger will poll every 30 seconds.
   :param retry_limit: The number of times to retry the connection in case of service outages.
   :param retry_delay: Minimum wait in seconds between retryable attempts when using the
       default retry strategy. The wait uses exponential backoff (doubling after each
       failure, capped at ``2 ** retry_limit`` seconds). May be a floating point number.
   :param retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` class.
   :param caller: The name of the operator that is calling the hook.


   .. py:attribute:: warehouse_id


   .. py:attribute:: target_state


   .. py:attribute:: databricks_conn_id


   .. py:attribute:: end_time


   .. py:attribute:: polling_period_seconds
      :value: 30



   .. py:attribute:: retry_limit
      :value: 3



   .. py:attribute:: retry_delay
      :value: 10



   .. py:attribute:: retry_args
      :value: None



   .. py:attribute:: caller
      :value: 'DatabricksWarehouseStateTrigger'



   .. py:attribute:: hook


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



